# sani

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: mkdocs.yaml  pytest.yaml
docs/: SUMMARY.md  index.md
docs/_assets/extra/: extra.css  extra.js  heti.css
docs/_assets/overrides/python/material/: function.html
docs/core/: Filter.md  Op.md  SaniTree.md  index.md
docs/extra/: extra.css  extra.js
docs/filters/: TypeFilter.md  index.md
sani/: __init__.py  api.py  core.py  filters.py
tests/: test_core.py
