[project]
name = "sani"
description = "一个结构简单、可组合、易于拓展的事件系统。"
authors = [{ name = "忘忧北萱草", email = "wybxc@qq.com" }]
dependencies = []
requires-python = ">=3.9"
license = "Apache-2.0"
dynamic = ["version"]
[project.optional-dependencies]

[tool.pdm]
version = { source = "file", path = "sani/__init__.py" }

[tool.pdm.dev-dependencies]
lint = ["black", "isort"]
test = ["pytest", "pytest-asyncio"]
dev = ["loguru>=0.6.0", "pre-commit>=2.20.0"]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-literate-nav",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
